[tool.poetry]
name = "nbisort"
version = "0.1.0"
description = "An import-formatting tool for notebooks"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
isort = ">= 5"
more-itertools = "^10.1.0"
nbformat = "^5.9.2"

[tool.poetry.scripts]
nbisort = 'nbisort.__main__:main'

[tool.poetry.group.dev.dependencies]
flake8 = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
